@@ -34,6 +34,7 @@ namespace GtkStyle
 {
     extern const char * constHideFrameProp;
 
+    QString readDconfSetting(const QString &setting, const QString scheme=QString());
     extern bool isActive();
     extern void drawSelection(const QStyleOptionViewItemV4 &opt, QPainter *painter, double opacity);
     extern QString themeName();
